maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:20: error: '=' expected but identifier found.
def is DirectionFree(dir:Direction):Boolean ={
       ^PledgeMaze:30: error: illegal start of simple expression
}
^